--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -35,7 +35,7 @@
   <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
     <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
   <% end %>
-
+<% if current_user.provider != "facebook"%>
   <div class="field">
     <%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
     <%= f.password_field :password, autocomplete: "off" %>
@@ -50,6 +50,7 @@
     <%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
     <%= f.password_field :current_password, autocomplete: "off" %>
   </div>
+<% end %>
 
   <div class="actions">
     <%= f.submit "Update" %>
@@ -58,6 +59,6 @@
 
 <h3>Delete My Account</h3>
 
-<p>Leaving us? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
+<p>Tired of sharing with your friends? <%= button_to "Recycle My Account", registration_path(resource_name), data: { confirm: "Are you sure you won't be needing any of your stuff back?" }, method: :delete %></p>
 
 <%= link_to "Back", :back %>
