Updated Flash Notices

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,8 +21,11 @@
   <div class="container-fluid">
     <div class="row">
       <div class="col-xs-12">
-        <p class="notice"><%= notice %></p>
-        <p class="alert"><%= alert %></p>
+    <% if flash[:alert] %>
+      <div class="alert alert-danger text-center" role="alert"><span class="alert"><%= alert %></span></div>
+    <% elsif flash[:notice] %>
+      <div class="alert alert-info text-center" role="alert"><span class="notice"><%= notice %></span></div>
+      <% end %>
       </div>
     </div>
     <%= yield %>
