--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,11 +21,12 @@
   <div class="container-fluid">
     <div class="row">
       <div class="col-xs-12">
-    <% if flash[:alert] %>
-      <div class="alert alert-danger text-center" role="alert"><span class="alert"><%= alert %></span></div>
-    <% elsif flash[:notice] %>
-      <div class="alert alert-info text-center" role="alert"><span class="notice"><%= notice %></span></div>
-      <% end %>
+        <% if flash[:alert] %>
+        <div class="alert alert-danger text-center" role="alert"><span class="alert"><%= alert %></span></div>
+        <% end %>
+        <% if flash[:notice] %>
+        <div class="alert alert-info text-center" role="alert"><span class="notice"><%= notice %></span></div>
+        <% end %>
       </div>
     </div>
     <%= yield %>
@@ -39,7 +40,7 @@
     </footer>
   </div>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-    <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+  <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
 
 </body>
 </html>
