--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -77,7 +77,7 @@
 						
 					</td>
 					<td>
-						<%= button_to 'Delete', item, method: :delete, remote: true, data: { confirm: "Are you sure you want to remove this item from your inventory?" }, class: "btn" %>
+						<%= button_to 'Delete', item,  method: :delete, remote: true, data: { confirm: "Are you sure you want to remove this item from your inventory?" }, class: "btn delete-item" %>
 					</td>
 				</tr>
 				<% end %>
@@ -107,7 +107,7 @@
 				<tr>
 					<td><%= item[0] %></td>
 					<td><%= item[1] %></td>
-					<td><%= item[2] %></td>
+					<td><%= mail_to item[2] %></td>
 				</tr>
 				<% end %>
 			</tbody>
