Added nav icon and updated link colors

--- a/app/views/devise/shared/_registration_items.html.erb
+++ b/app/views/devise/shared/_registration_items.html.erb
@@ -1,5 +1,5 @@
 <% if user_signed_in? %>
-  <li class= "nav-item">
+  <li class= "nav-item"><span class="fa fa-wrench"></span>
   <%= link_to('Edit Profile', edit_user_registration_path, class: "nav-link") %>
   </li>
 <% else %>
