--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -4,6 +4,7 @@
 @import "users";
 @import "static";
 @import 'pages';
+@import "profile-link";
 
 @-moz-document url-prefix() {
 	fieldset {
@@ -14,7 +15,7 @@
 
 body {
 	font-family: 'Inconsolata';
-	padding-top: 60px;
+	padding-top: 70px;
 }
 	.user_profile_element {
 		max-width: 200px;
@@ -26,9 +27,11 @@ body {
 	}
 
 .site-name {
-	font-family: 'Inconsolata';
+	font-family: 'Lobster';
+	font-size: 1.5em;
 }
 
+// General Links
 
 ul.nav li a, ul.nav li a:visited {
     color: #183642 !important;
@@ -41,3 +44,22 @@ ul.nav li a:hover, ul.nav li a:active {
 ul.nav li.active a {
     color: #FAF3DD !important;
 }
+
+// Top Links
+
+ul.nav li a.top-bar-nav-link, ul.nav li a.top-bar-nav-link:visited {
+    color: #FFFFFF !important;
+}
+
+ul.nav li a.top-bar-nav-link:hover, ul.nav li a.top-bar-nav-link:active {
+    color: #FFFFFF !important;
+}
+
+ul.nav li.active a.top-bar-nav-link {
+    color: #FFFFFF !important;
+}
+
+.fa-question {
+	color: #183642;
+}
+
