--- a/app/views/devise/shared/_login_items.html.erb
+++ b/app/views/devise/shared/_login_items.html.erb
@@ -1,9 +1,9 @@
 <% if user_signed_in? %>
-  <li class= "nav-item">
+  <li class= "nav-item"><span class="fa fa-sign-out"></span>
   <%= link_to('Logout', destroy_user_session_path, :method => :delete, class: "nav-link") %>        
   </li>
 <% else %>
-  <li class= "nav-item">
+  <li class= "nav-item"><span class="fa fa-sign-in"></span>
   <%= link_to('Login', new_user_session_path, class: "nav-link")  %>  
   </li>
 <% end %>
