--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,16 +5,18 @@
 
   <link href='https://fonts.googleapis.com/css?family=Lobster' rel='stylesheet' type='text/css'>
   <link href='https://fonts.googleapis.com/css?family=Inconsolata:400,700' rel='stylesheet' type='text/css'>
+  
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
   <%= csrf_meta_tags %>
 
 </head>
 <body>
   <nav class="navbar navbar-fixed-top navbar-dark bg-inverse nav-bg clearfix">
     <%= link_to 'Lowner', '/', class: "navbar-brand site-name" %>
-    <ul class="nav navbar-nav pull-right">
-      <li class="nav-item"><a href="##" class="nav-link" data-toggle="tab">Home</a></li>
-      <li class="nav-item"><%= link_to 'About', about_path, class: "nav-link" %></li>
+    <ul class="nav navbar-nav pull-right hover">
+      <li class="nav-item"><a href="/" class="nav-link top-bar-nav-link" data-toggle="tab"><i class=" fa fa-home fa-2x"></i></a></li>
+
       <%= render 'layouts/shared/profile_items' %>
     </ul>
   </nav>
@@ -29,18 +31,24 @@
         <% end %>
       </div>
     </div>
+
     <%= yield %>
+
+
     <footer>
       <nav class="navbar navbar-fixed-bottom navbar-light bg-faded">
         <ul class="nav navbar-nav  pull-right nav-tabs">
           <%= render 'devise/shared/registration_items' %>
           <%= render 'devise/shared/login_items' %>
+                <li class="nav-item top-bar-nav-link"><a href="/about" class="nav-link" data-toggle="tab"><i class=" fa fa-info-circle fa-2x"></i></a></li>
         </ul>
       </nav>
     </footer>
   </div>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+  
 
+  <script src="https://use.fonticons.com/6ceac7ad.js"></script>
 </body>
 </html>
