--- a/app/views/layouts/shared/_profile_items.html.erb
+++ b/app/views/layouts/shared/_profile_items.html.erb
@@ -1,9 +1,9 @@
 <% if user_signed_in? %>
   <li class= "nav-item">
-  <%= link_to(current_user.email, profile_path(current_user), class: "nav-link") %>        
+  <%= link_to(current_user.email, profile_path(current_user), class: "nav-link top-bar-nav-link nav-profile-font-size") %>        
   </li>
 <% else %>
   <li class= "nav-item">
-  <%= link_to('Login to Lowner', new_user_session_path, class: "nav-link")  %>  
+  <%= link_to('Login to Lowner', new_user_session_path, class: "nav-link top-bar-nav-link")  %>  
   </li>
 <% end %>
