--- a/app/views/devise/shared/_registration_items.html.erb
+++ b/app/views/devise/shared/_registration_items.html.erb
@@ -1,6 +1,6 @@
 <% if user_signed_in? %>
-  <li class= "nav-item"><span class="fa fa-wrench"></span>
-  <%= link_to('Edit Profile', edit_user_registration_path, class: "nav-link") %>
+  <li class= "nav-item"><span class=""></span>
+  <%= link_to('  Edit Profile', edit_user_registration_path, class: "nav-link fa fa-wrench") %>
   </li>
 <% else %>
   <li class= "nav-item">
