--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -40,7 +40,7 @@
         <ul class="nav navbar-nav  pull-right nav-tabs">
           <%= render 'devise/shared/registration_items' %>
           <%= render 'devise/shared/login_items' %>
-                <li class="nav-item top-bar-nav-link"><a href="/about" class="nav-link" data-toggle="tab"><i class=" fa fa-info-circle fa-2x"></i></a></li>
+                <li class="nav-item top-bar-nav-link"><%= link_to "", '/about', class: "nav-link fa fa-info-circle fa-lg" %> </li>
         </ul>
       </nav>
     </footer>
