--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -82,3 +82,12 @@ ul.nav li.active a.top-bar-nav-link {
 	border-color: #8FC0A9
 }
 
+// .card-custom-width {
+// 	min-width: 230px;
+// 	max-width: 400px;
+// }
+
+.card-img-users-share {
+	max-height: 125px;
+	max-width: 225px;
+}
