--- a/app/views/items/new.html.erb
+++ b/app/views/items/new.html.erb
@@ -13,7 +13,7 @@
 	<div class="form-group row">
 		<%= f.label :category, class: "sr-only"  %>
 		<div class="col-sm-12">
-			<%= f.select :category, options_for_select([['Book', 1], ['Music', 2], ['Money', 3], ['Bike', 4], ['Misc', 5], ['Appliance', 6], ['Clothes', 7], ['Jewelry', 8], ['Electronic', 9]]), {include_blank: 'Select a Category'}, {class: 'form-control'} %>
+			<%= f.select :category, options_for_select([['Book'], ['Music'], ['Money'], ['Bike'], ['Misc'], ['Appliance'], ['Clothes'], ['Jewelry'], ['Electronic']]), {include_blank: 'Select a Category'}, {class: 'form-control'} %>
 		</div>
 	</div>
 	<div class="form-group row">
