--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -5,25 +5,33 @@
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= devise_error_messages! %>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true %>
+  <div class="form-group">
+
+    <%= f.label :email, class: "sr-only" %>
+      <div class="input-group">
+  <div class="input-group-addon"><i class="fa fa-at"></i></div>
+    <%= f.email_field :email, autofocus: true, placeholder: "Email" %>
+        </div>
   </div>
 
-  <div class="field">
-    <%= f.label :username %><br />
-    <%= f.text_field :username %>
+  <div class="form-group">
+    <%= f.label :username, class: "sr-only"  %>
+          <div class="input-group">
+  <div class="input-group-addon"><i class="fa fa-user"></i></div>
+    <%= f.text_field :username, placeholder: "Username" %>
+    </div>
   </div>
 
-  <div class="field">
-    <%= f.label :password %>
+  <div class="form-group">
+    <%= f.label :password, class: "sr-only" %>
     <% if @minimum_password_length %>
     <em>(<%= @minimum_password_length %> characters minimum)</em>
     <% end %><br />
+    div.
     <%= f.password_field :password, autocomplete: "off" %>
   </div>
 
-  <div class="field">
+  <div class="form-group">
     <%= f.label :password_confirmation %><br />
     <%= f.password_field :password_confirmation, autocomplete: "off" %>
   </div>
