--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -2,7 +2,10 @@
 <div class='form-group'>
 	<%= form_tag users_path, :method => 'get', id: 'users_search' do %>
 	<div class="row">
-		<div class="input-group col-md-3 pull-right">
+		<div class="col-md-7">
+			<h1>Users</h1>
+		</div>
+		<div class="input-group col-md-5 pull-right">
 			<div class="input-group-addon"><i class="fa fa-search"></i></div>
 			<p>
 				<%= text_field_tag :search, params[:search], class: "form-control"  %>
@@ -17,28 +20,29 @@
 	</div>
 </div>
 
-<table class = "table">
-	<thead>
-		<tr>
-			<th>Username</th>
-			<th>Profile Created</th>
-			<th>Profile Photo</th>
-		</tr>
-	</thead>
+<div class="table-responsive">
+	<table class = "table table-striped">
+		<thead class="thead-inverse">
+			<tr>
+				<th>#</th>
+				<th>Username</th>
+				<th>Profile Created</th>
+				<th>Profile Photo</th>
+			</tr>
+		</thead>
+		<tbody>
+			<% @users.each_with_index do |u, i| %>
+			<tr>
+				<th scope="row"><%= (i+1) %></th>
+				<td><%= u.username %></td>
+				<td><%= time_ago_in_words(u.created_at) %> Ago</td>
+				<div class="user_photo"><td><%= image_tag u.avatar.url("small"), class: "card-img-users-share" %></td></div>
+			</tr>
+			<% end %>
+		</tbody>
+	</table>
+</div>
 
-	<tbody>
-		<% @users.each do |u| %>
-		<tr>
-			<td><%= u.username %></td>
-			<td><%= time_ago_in_words(u.created_at) %> Ago</td>
-			<div class="user_photo"><td><%= image_tag u.avatar.url("small"), class: "user_specific_photo user_profile_element" %></td></div>
-		</tr>
-		<% end %>
-	</tbody>
-</table>
-
-
-
-<%= link_to 'Back', users_path %>
+<%= link_to 'Back', :back %>
 
 
