--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -3,42 +3,45 @@
 <h2>Sign up</h2>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= devise_error_messages! %>
+<%= devise_error_messages! %>
 
-  <div class="form-group">
 
-    <%= f.label :email, class: "sr-only" %>
-      <div class="input-group">
-  <div class="input-group-addon"><i class="fa fa-at"></i></div>
-    <%= f.email_field :email, autofocus: true, placeholder: "Email" %>
-        </div>
+<div class="form-group">
+  <%= f.label :email, class: "sr-only" %>
+  <div class="input-group">
+    <div class="input-group-addon"><i class="fa fa-at"></i></div>
+    <%= f.email_field :email, autofocus: true, placeholder: "Email", class: "col-sm-3"%>
   </div>
+</div>
 
-  <div class="form-group">
-    <%= f.label :username, class: "sr-only"  %>
-          <div class="input-group">
-  <div class="input-group-addon"><i class="fa fa-user"></i></div>
-    <%= f.text_field :username, placeholder: "Username" %>
-    </div>
+<div class="form-group">
+  <%= f.label :username, class: "sr-only"  %>
+  <div class="input-group">
+    <div class="input-group-addon"><i class="fa fa-user"></i></div>
+    <%= f.text_field :username, placeholder: "Username", class: "col-sm-3" %>
   </div>
+</div>
+<div class="form-group">
+  <%= f.label :password, class: "sr-only" %>
+  <% if @minimum_password_length %>
+  <em>(<%= @minimum_password_length %> characters minimum)</em>
+  <% end %><br />
+  <div class="input-group">
+    <div class="input-group-addon"><i class="fa fa-key"></i></div>
+    <%= f.password_field :password, placeholder: "Password", autocomplete: "off", class: "col-sm-3" %>
+  </div>
+</div>
+<div class="form-group">
+  <%= f.label :password_confirmation, class: "sr-only" %>
+  <div class="input-group">
+    <div class="input-group-addon"><i class="fa fa-key"></i></div>
+    <%= f.password_field :password_confirmation, placeholder: "Password Confirmation", autocomplete: "off", class: "col-sm-3" %>
+  </div>
+</div>
 
-  <div class="form-group">
-    <%= f.label :password, class: "sr-only" %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    div.
-    <%= f.password_field :password, autocomplete: "off" %>
-  </div>
-
-  <div class="form-group">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "off" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Sign up" %>
-  </div>
+<div class="actions">
+  <%= f.submit "Sign up", class: "btn btn-default btn-info" %>
+</div>
 <% end %>
-
+<hr>
 <%= render "devise/shared/links" %>
