--- a/app/views/devise/shared/_registration_items.html.erb
+++ b/app/views/devise/shared/_registration_items.html.erb
@@ -1,9 +1,9 @@
 <% if user_signed_in? %>
   <li class= "nav-item">
-  <%= link_to('  Edit Profile', edit_user_registration_path, class: "nav-link fa fa-wrench") %>
+  <%= link_to('  Edit Profile', edit_user_registration_path, class: "nav-link top-bar-nav-link fa fa-wrench nav-profile-font-size") %>
   </li>
 <% else %>
   <li class= "nav-item">
-  <%= link_to(' Register', new_user_registration_path, class: "nav-link fa fa-arrow-circle-right")  %>
+  <%= link_to(' Register', new_user_registration_path, class: "nav-link top-bar-nav-link fa fa-arrow-circle-right")  %>
   </li>
 <% end %>
