--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,9 +5,12 @@
 
   <link href='https://fonts.googleapis.com/css?family=Lobster' rel='stylesheet' type='text/css'>
   <link href='https://fonts.googleapis.com/css?family=Inconsolata:400,700' rel='stylesheet' type='text/css'>
-  
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+
+
   <%= csrf_meta_tags %>
 
 </head>
@@ -15,8 +18,8 @@
   <nav class="navbar navbar-fixed-top navbar-dark bg-inverse nav-bg clearfix">
     <%= link_to 'Lowner', '/', class: "navbar-brand site-name" %>
     <ul class="nav navbar-nav pull-right hover">
-      <li class="nav-item"><a href="/" class="nav-link top-bar-nav-link" data-toggle="tab"><i class=" fa fa-home fa-2x"></i></a></li>
-
+      <li class="nav-item"><a href="/" class="nav-link top-bar-nav-link" data-toggle="tab"><i class=" fa fa-home fa-lg"></i></a></li>
+      <%= render 'devise/shared/registration_items' %>
       <%= render 'layouts/shared/profile_items' %>
     </ul>
   </nav>
@@ -38,17 +41,17 @@
     <footer>
       <nav class="navbar navbar-fixed-bottom navbar-light bg-faded">
         <ul class="nav navbar-nav  pull-right nav-tabs">
-          <%= render 'devise/shared/registration_items' %>
           <%= render 'devise/shared/login_items' %>
-                <li class="nav-item top-bar-nav-link"><%= link_to "", '/about', class: "nav-link fa fa-info-circle fa-lg" %> </li>
+          <li class="nav-item top-bar-nav-link"><%= link_to "", '/about', class: "nav-link fa fa-info-circle fa-lg" %> </li>
         </ul>
       </nav>
     </footer>
   </div>
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-  <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+
   
 
+  <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <script src="https://use.fonticons.com/6ceac7ad.js"></script>
+  
 </body>
 </html>
