--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -21,7 +21,7 @@
 </div>
 
 <div class="table-responsive">
-	<table class = "table table-striped">
+	<table class = "table table-striped tablesorter" id="users-index-table">
 		<thead class="thead-inverse">
 			<tr>
 				<th>#</th>
