Added Collapsing Buttons

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,13 +25,8 @@
   </nav>
   <div class="container-fluid">
     <div class="row">
-      <div class="col-xs-12">
-        <% if flash[:alert] %>
-        <div class="alert alert-danger text-center" role="alert"><span class="alert"><%= alert %></span></div>
-        <% end %>
-        <% if flash[:notice] %>
-        <div class="alert alert-info text-center" role="alert"><span class="notice"><%= notice %></span></div>
-        <% end %>
+      <div class="col-xs-6 center-block">
+      <%= render 'layouts/shared/flashes' %>
       </div>
     </div>
 
