--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -21,7 +21,7 @@
 			<div class="container">
 				<h1 class="text-center logo-text"><a href="/" class="main-logo-link">LOWNER</a></h1>
 				<nav class="nav navbar">
-					<ul class=" nav nav-pills text-center">
+					<ul class=" nav navbar nav-pills text-center">
 						<li class="nav-link">
 							<% if user_signed_in? %>
 							<%= link_to "Your Profile", profile_path(current_user), class: 'menuButton' %>
@@ -41,7 +41,7 @@
 						</li>
 					</ul>
 				</nav>
-				<div id="hidden-block" class="learn-more" display="none">
+				<div id="hidden-block" class="learn-more center-block" display="none">
 					<p>This should be hidden
 						Stumptown meh master cleanse tote bag ethical. Raw denim austin viral 8-bit ramps, affogato bitters thundercats narwhal irony selfies keytar dreamcatcher sriracha fashion axe. Fanny pack meh hashtag ugh, migas drinking vinegar tilde humblebrag seitan locavore pabst try-hard mustache. Ramps heirloom godard typewriter bespoke 3 wolf moon, twee cray freegan vegan XOXO. Art party pour-over food truck kogi, scenester venmo tacos portland dreamcatcher squid tumblr vinyl hella tote bag sartorial. Kitsch XOXO swag scenester, selfies wayfarers put a bird on it gastropub irony listicle knausgaard quinoa art party hoodie. Meditation organic offal, kitsch messenger bag franzen squid yuccie microdosing.
 
@@ -51,7 +51,14 @@
 			</div>
 		</div>
 		<div class="clearfix"></div>
-		<footer class="footer" id="taco-town">
+		<footer class="footer">
+		<div class="row">
+		<nav class="navbar navbar-fixed-bottom navbar-dark bg-inverse col-sm-1">
+		<ul class="nav navbar">
+			<li><i class="fa fa-bar">cat</i></li>
+		</ul>
+		</nav>
+		</div>
 		</footer>
 	</div>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
