--- a/app/views/items/new.html.erb
+++ b/app/views/items/new.html.erb
@@ -30,9 +30,9 @@
 		</div>
 	</label>
 	<div class="form-group row">
-		<%= f.submit "Create New Item", class: "btn btn-secondary col-sm-6 col-sm-offset-3" %>
+		<%= f.submit "Create New Item", class: "btn btn-secondary col-sm-6 col-sm-offset-3 send-item" %>
 		<div class="col-sm-3">
-		<button type="button" class= "btn btn-info fa fa-question" id="find-out-more" data-toggle="popover" title="What does this do?" data-placement="right" data-content="After you create the item, you can loan it to a friend."></button>
+		<button type="button" class= "btn btn-info" id="find-out-more" data-toggle="popover" title="What does this do?" data-placement="right" data-content="After you create the item, you can loan it to a friend."><i class="fa fa-question-circle"></i></button>
 		</div>
 	</div>
 	<% end %>
