--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,7 @@
   <%= csrf_meta_tags %>
 
 </head>
-<body>
+<body id="main-bg">
   <nav class="navbar navbar-fixed-top navbar-dark bg-inverse nav-bg clearfix">
     <%= link_to 'Lowner', '/', class: "navbar-brand site-name" %>
     <ul class="nav navbar-nav pull-right hover">
