--- a/app/assets/stylesheets/static.scss
+++ b/app/assets/stylesheets/static.scss
@@ -1,13 +1,9 @@
 
-// .index_background {
-// 	background-image: url("sativa.png");
-// 	width: 1080px;
-// 	height: 100%;
-// 	margin: 0 auto;
-// 	padding: 0;
-// }
 
-body {
-	background-image: url("sativa.png");
+body#main-bg {
+	background: -webkit-linear-gradient(top, #55EFCB 0%, #5BCAFF 100%);
+    background: -moz-linear-gradient(top, #55EFCB 0%, #5BCAFF 100%);
+    background: -ms-linear-gradient(top, #55EFCB 0%, #5BCAFF 100%);
+    background: linear-gradient(top, #55EFCB 0%, #5BCAFF 100%);
 }
 
